Fix layout issues when more than 6 apps are added to library.

--- a/src/app/shared/components/app-hub/app-hub.component.scss
+++ b/src/app/shared/components/app-hub/app-hub.component.scss
@@ -66,6 +66,7 @@ h1 {
 p {
   margin-top: $baseline;
   font-size: 14px;
+  white-space: pre-wrap;
 }
 
 .right {
